# rlox

./: '  Cargo.toml  README.md
src/: formatter.rs  keyword.rs  main.rs  report.rs  scanner.rs  token.rs
src/evaluator/: binary.rs  literals.rs  mod.rs  unary.rs
src/lexer/: errors.rs  mod.rs  scan.rs  token.rs
src/parser/: expr.rs  mod.rs  operator.rs  parse.rs
src/scanner/: keyword.rs  mod.rs  scan.rs  token.rs
