[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.94"                                                 # error handling
bytes = "1.9.0"                                                   # helps manage buffers
phf = { version = "0.11.2", features = ["macros", "phf_macros"] }
thiserror = "2.0.5"                                               # error handling
