[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.6"
